# crates/manta-server/src/server/api_doc.rs
@@ -104,12 +104,10 @@ use super::handlers;
     manta_shared::types::api::responses::CreateSessionResponse,
     manta_shared::types::api::responses::EphemeralEnvResponse,
     manta_shared::types::api::responses::CompletedResponse,
-    manta_shared::types::api::responses::DeleteSessionResponse,
     manta_shared::types::api::responses::MigrateNodesPairResult,
     manta_shared::types::api::responses::MigrateNodesResponse,
     manta_backend_dispatcher::types::Group,
     manta_backend_dispatcher::types::Member,
-    manta_backend_dispatcher::types::XnameId,
     manta_backend_dispatcher::types::bss::BootParameters,
   )),
   modifiers(&SecurityAddon),
